@@ -1,10 +1,13 @@
 Changes in Version 0.3
 
-    o Added "Getting started" vignette
+    o Added "Getting started" vignette.
 
-    o Changes to handle lavaan 0.5-18's treatment of equality constraints
+    o Changes to handle lavaan 0.5-18's treatment of equality constraints.
 
     o Fixed issue where print methods sometimes wrapped over lines.
+
+    o Fixed bug in llcont() for lavaan objects missing all data except
+      one variable.
 
 Changes in Version 0.2
 
